# corobots-melodic

./: README.md
corobot_bringup/: CMakeLists.txt  package.xml
corobot_bringup/launch/: gpu.launch  robot_base.launch
corobot_controller/: CMakeLists.txt  package.xml
corobot_controller/scripts/: Controller.py
corobot_follower/: CMakeLists.txt  package.xml
corobot_follower/data/: camera_intrinsic_calibration.txt
corobot_follower/msg/: HumanLocationList.msg  OpenPoseGesture.msg  OpenPoseGestureList.msg  OpenPoseHuman.msg  OpenPoseHumanList.msg
corobot_follower/scripts/: corobot_tracker.py  follower.py  gesture_exploration.py  gesture_service.py  goto.py  line.py  location_service.py  openpose_service.py  point.py  segment.py  test.py  test.txt  test2.txt  tracker.py
corobot_follower/scripts/old/: collect_data_for_gestures.py  openpose_enhancer.py  test.dump  test.py
corobot_follower/srv/: EstimatePoseSrv.srv  GesturesSrv.srv  LocationSrv.srv
corobot_openpose/: CMakeLists.txt  package.xml
corobot_openpose/scripts/: openpose_service.py
corobot_openpose/srv/: EstimatePoseSrv.srv
openpose_ros/launch/: openpose_ros.launch
openpose_ros/src/: openpose_flags.cpp  openpose_ros_io.cpp
openpose_ros_msgs/msg/: OpenPoseHuman.msg  OpenPoseHumanList.msg
