<?xml version="1.0"?>
<package format="2">
    <name>corobot_openpose</name>
    <version>0.0.1</version>
    <description>The corobot_openpose package</description>
    <maintainer email="np7803@rit.edu">Nikhil Pandey</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
</package>
